# mf-automation

./: .env.local  .gitignore  ALGORITHM_DOCUMENTATION.md  BACKTEST_RESULTS.md  GOOGLE_SHEETS_API_GUIDE.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.md  SETUP_GOOGLE_SHEETS.md  backtest_report_conservative_20251202_105908.txt  backtest_results_conservative_20251202_105908.json  list_sheets_example.py  pyproject.toml
archive/: ALGORITHM_TEST_RESULTS.md  BACKTEST_ANALYSIS_REPORT.md  DIP_BUYING_GUIDE.md  smart_dip_buyer.py
archive/backtest/: backtest_diagnostics.py  backtest_dip_strategy.py
archive/mf_old/: dip_analyzer_old.py
archive/unused/: screener_fetcher.py
email/: email_sender.py
resources/: mfapifunds.json
src/: main.py  scheduler.py
src/email/: email_example.py
src/email/template/: email_report_generator.py
src/mf/: README.md  __init__.py  config.py  constants.py  data_fetcher.py  dip_analyzer.py  exceptions.py  fund_loader.py  historical_dip_analysis.py  history_analyzer.py  mf_funds.csv  mf_funds.py  scoring.py  trend_analyzer.py  trends_analyser.py  types.py  utils.py
src/mf/backtest/: README.md  backtest_dip_strategy.py  (+2 more)
src/mf/docs/: SCORING_REFERENCE.md
src/sheet/: __init__.py  google_sheet.py  sheet_lister.py  sheetest.py
src/stocks/: README.md  TechnicalAnalysis.py  TechnicalScore.py  __init__.py  analyze_and_update_sheet.py  config.py  fundamental_analyzer.py  historical_data.py  models.py  run_analysis.py  run_sheet_analysis.py  stock_data_fetcher.py  stock_dip_analyzer.py  stocks_watchlist.csv  upstox_apitest.py  upstoxtest.py
(+14 files in other folders)
