[project]
name = "mf-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "requests>=2.31.0",
    "yfinance>=0.2.32",
    "beautifulsoup4>=4.12.0",
    "schedule>=1.2.0",
    "apscheduler>=3.10.4",
    "black>=24.0.0",
    "isort>=5.13.0",
    "gspread>=6.0.0",
    "upstox-python-sdk>=2.19.0",
]
